Closed Bug 1912245 Opened 2 months ago Closed 1 month ago

Firefox fails to relaunch if it’s closed via the keyboard or App menu while the “Scan in progress” dialog is shown with certain policies

Categories

(Firefox :: Data Loss Prevention, defect)

Desktop
Windows
defect

Tracking

()

VERIFIED FIXED
131 Branch
Tracking Status
firefox-esr128 --- verified
firefox129 --- disabled
firefox130 --- wontfix
firefox131 --- verified

People

(Reporter: bhidecuti, Assigned: gstoll)

References

(Blocks 2 open bugs)

Details

Attachments

(3 files)

Attached video video showing the issue

Found in

  • 130.0b2

Affected versions

  • 131.0a1 (2024-08-07)
  • 130.0b2
  • 128.1.0esr

Preconditions

  • Download the DLP test assets from https://drive.google.com/file/d/1yjqVRuxdKV3WnO7D2wzMgDXBuYBxUgVw/view
  • Create a distribution folder inside the Firefox folder and paste the policies-2.json to it and then rename it to policies.json
  • Run the DLP agent in CMD using: .\content_analysis_sdk_agent.exe --user --toblock=.\d{3}-?\d{2}-?\d{4}. --towarn=.warn. --delays=10

Tested platforms

  • Affected platforms: Windows 11
  • Unaffected platforms: Ubuntu, macOS

Steps to reproduce

  1. Navigate to https://www.wikipedia.org/ and paste “ok text”
  2. Close Firefox via App Menu or Ctrl + Shift + Q while the “Scan in progress” message is displayed
  3. Open Firefox again and observe the behavior

Expected result

  • Firefox is successfully launched.

Actual result

  • Firefox does not launch. Firefox processes are still running.

Regression range

  • This is not a regression as this is a new feature

Additional notes

  • Also reproducing if using policies-4.json
  • Not reproducing with the rest of the policies.json
  • Not reproducing if closing the browser from the “x” button
  • Not reproducing for the upload operation while the “Scan in progress” dialog is shown
  • Not reproducing for the “Blocked” or “Warn” dialogs

policies-2.json and policies-4.json are the only policies that have the "default warn" behavior (i.e. "DefaultResult": 1). This is worth investigating but we're not even sure if anyone is going to use this, so I don't think this should block the release.

Assignee: nobody → gstoll
Status: NEW → ASSIGNED
Pushed by gstoll@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e510d4698398 don't shutdownhang with Content Analysis request active and default warn policy set r=dlp-reviewers,handyman
Status: ASSIGNED → RESOLVED
Closed: 1 month ago
Resolution: --- → FIXED
Target Milestone: --- → 131 Branch

The patch landed in nightly and beta is affected.
:gstoll, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox130 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(gstoll)
Flags: needinfo?(gstoll)

Verified as fixed using Firefox Nightly 131.0a1 (2024-08-29), on Windows 11.
Firefox is relaunching after closing it via the keyboard or App menu while the “Scan in progress” dialog is shown with policies 2 and 4.

Attachment #9423598 - Flags: approval-mozilla-esr128?

esr128 Uplift Approval Request

  • User impact if declined: possible shutdownhang if Firefox quits while a DLP scan is active and "default warn" is on
  • Code covered by automated testing: no
  • Fix verified in Nightly: yes
  • Needs manual QE test: no
  • Steps to reproduce for manual QE testing: n/a
  • Risk associated with taking this patch: low
  • Explanation of risk level: small change to DLP code
  • String changes made/needed: no
  • Is Android affected?: no
Attachment #9423598 - Flags: approval-mozilla-esr128? → approval-mozilla-esr128+

Verified as fixed on Firefox 128.3.0esr, build ID 20240911002735 (from Treeherder), using Windows 10/11. Firefox is relaunching after closing it via the keyboard or App menu while the “Scan in progress” dialog is shown with policies 2 and 4.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: