Bug 1912245 - don't shutdownhang with Content Analysis request active and default warn policy set  a=diannaS

Original Revision: https://phabricator.services.mozilla.com/D219910

Differential Revision: https://phabricator.services.mozilla.com/D221508